# pc-manager-mcp

./: .gitignore  CLINE_SETUP.md  LICENSE  README.md  SHARING_GUIDE.md  TOOL_CATALOG.md  pyproject.toml
mcp_server/: __init__.py  executor.py  server.py  tool_metadata.yaml  tool_registry.py
pyscripts/: cancel_print_job.py  check_process_health.py  check_root_certificate.py  check_time_synchronization.py  clear_proxy_config.py  control_print_job.py  delete_hosts_entry.py  disable_startup_item.py  enable_disable_device.py  enable_startup_item.py  execute_cleanup_items.py  flush_dns.py  force_gpupdate.py  get_active_connections.py  get_active_power_plan.py  get_antivirus_status.py  get_app_last_used_time.py  get_audio_service_status.py  get_battery_status.py  get_bitlocker_status.py  get_browser_extensions.py  get_bsod_history.py  get_device_status.py  get_directory_size.py  get_disk_info.py  get_dns_config.py  get_event_log.py  get_firewall_status.py  get_gpo_status.py  get_hosts_content.py  get_installed_software.py  get_local_admin_members.py  get_mic_privacy_settings.py  get_monitor_topology.py  get_network_configuration_snapshot.py  get_os_update_status.py  get_pagefile_status.py  get_password_expiry.py  get_pnp_device_list.py  get_power_requests.py  (+41 more)
scripts/scripts/powershell/: cancel_print_job.ps1  check_process_health.ps1  check_root_certificate.ps1  check_time_synchronization.ps1  clear_proxy_config.ps1  control_print_job.ps1  delete_hosts_entry.ps1  disable_startup_item.ps1  enable_disable_device.ps1  enable_startup_item.ps1  execute_cleanup_items.ps1  (+70 more)
(+1 files in other folders)
