[project]
name = "pc-manager-mcp"
version = "0.1.0"
description = "MCP Server for PC Manager tools"
requires-python = ">=3.8"
dependencies = [
    "mcp>=0.9.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
